--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
   <!--  TODO-->
   <title>Разговорный клуб</title>
   <link rel="icon" type="image/x-icon" href="/img/android-chrome-192x192.png">
-  <meta name="description" content="A growing collection of ready to use components for the CSS framework Bootstrap 5">
+  <meta name="description" content="Разговорный клуб по английскому на темы психологии и саморазвития SPEAK.ENG THERAPY">
   <!--  TODO-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/theme.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     @font-face {
       font-family: 'Inter';
@@ -114,7 +115,7 @@
 <nav id="navScroll" class="navbar navbar-expand-lg navbar-light fixed-top bg-light" tabindex="0">
   <div class="container">
     <a class="navbar-brand pe-4 fs-4" href="https://t.me/+3weRs3PNhSc4NDVi">
-      <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16">
+      <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#d557cc" class="bi bi-telegram" viewBox="0 0 16 16">
         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.287 5.906q-1.168.486-4.666 2.01-.567.225-.595.442c-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294q.39.01.868-.32 3.269-2.206 3.374-2.23c.05-.012.12-.026.166.016s.042.12.037.141c-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8 8 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629q.14.092.27.187c.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.4 1.4 0 0 0-.013-.315.34.34 0 0 0-.114-.217.53.53 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09"/>
       </svg>
       <span class="ms-1 fw-bolder">t.me/ksush_a_live</span>
@@ -125,27 +126,27 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#aboutus">
+          <a class="nav-link" href="#aboutus" style="color: #d557cc !important;">
             О клубе
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#advantages">
+          <a class="nav-link" href="#advantages"  style="color: #d557cc !important;">
             Почему мы
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#testimonials">
+          <a class="nav-link" href="#testimonials"  style="color: #d557cc !important;">
             Отзывы
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#tarifs">
+          <a class="nav-link" href="#tarifs"  style="color: #d557cc !important;">
             Тарифы участия
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#form">
+          <a class="nav-link" href="#form"  style="color: #d557cc !important;">
             Записаться
           </a>
         </li>
@@ -158,13 +159,13 @@
     <div class="container">
       <div class="row d-flex justify-content-center">
         <br>
-        <div class="col-12 col-xl-8 text-center">
+        <div class="col-12 col-xl-8 text-center" data-aos="fade-down">
           <h3 class="fw-bold display-10">Разговорный клуб по английскому</h3>
           <h3 class="fw-bold display-10">на темы психологии и саморазвития</h3>
           <h2 class="fw-bold display-4">SPEAK.ENG THERAPY</h2>
           <p class="lead mb-3">
             Общаясь на английском, хочешь чувствовать себя уверенно, говорить смело и естественно?
-            Приходи на встречи — прокачивай навыки говорения в классной компани и развивайся
+            Приходи на встречи — прокачивай навыки говорения в классной компании и развивайся
           </p>
           <a href="#tarifs" class="btn btn-primary px-5 py-3 shadow me-1 button-color">Записаться</a>
           <p class="lead fw-bold" style="color: #d557cc; padding-top: 10px !important;">–60% на первую встречу</p>
@@ -281,7 +282,7 @@
             SPEAK.ENG THERAPY — не просто разговорный клуб, а пространство, где
             мы лучше узнаем себя и мир вокруг, поднимая важные темы.
             <br>
-            Наш клуб — это терапевтичные встречи под руководством коуча, где ты:
+            Наш клуб — это <span style="color: #d557cc">терапевтичные встречи</span> под руководством коуча, где ты:
           </h4>
         </div>
       </div>
@@ -493,7 +494,7 @@
       </div>
     </div>
   </div>
-  <div class="py-vh-4" id="form">
+  <div class="py-vh-2" id="form">
     <div class="position-relative bg-primary bg-cover bp-center" style="background-image: url(/img/form.jpg);">
 <!--      <div class="position-absolute w-100 h-100 opacity-75 bg-primary"></div>-->
       <div class="container">
@@ -668,6 +669,7 @@
 </script>
 
 <footer>
+  <div class="container text-center">По любым вопросам пиши: <a href="https://t.me/itsksushalive">t.me/itsksushalive</a></div>
   <div class="container text-center py-3 small">Информация размещённая на сайте не является публичной офертой</div>
 </footer>
 <script src="js/bootstrap.bundle.min.js"></script>
