--- a/index.html
+++ b/index.html
@@ -108,17 +108,19 @@
       color: #ffffff;
     }
 
+    .main-background {
+      background-image: url(/img/pink.webp);
+      background-position: top right 10px;
+    }
+
     .saturate { filter: saturate(3); }
   </style>
 </head>
-<body data-bs-spy="scroll" data-bs-target="#navScroll">
+<body data-bs-spy="scroll" data-bs-target="#navScroll" style="padding-top: 105px">
 <nav id="navScroll" class="navbar navbar-expand-lg navbar-light fixed-top bg-light" tabindex="0">
   <div class="container">
-    <a class="navbar-brand pe-4 fs-4" href="https://t.me/+3weRs3PNhSc4NDVi">
-      <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#d557cc" class="bi bi-telegram" viewBox="0 0 16 16">
-        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.287 5.906q-1.168.486-4.666 2.01-.567.225-.595.442c-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294q.39.01.868-.32 3.269-2.206 3.374-2.23c.05-.012.12-.026.166.016s.042.12.037.141c-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8 8 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629q.14.092.27.187c.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.4 1.4 0 0 0-.013-.315.34.34 0 0 0-.114-.217.53.53 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09"/>
-      </svg>
-      <span class="ms-1 fw-bolder">t.me/ksush_a_live</span>
+    <a class="navbar-brand pe-4 fs-4">
+      <span class="ms-1 fw-bolder" style="color: #d557cc">Speak.eng Therapy</span>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -155,7 +157,7 @@
   </div>
 </nav>
 <main class="text-color">
-  <div class="wrapper bg-light py-vh-6" style="background-image: url(/img/head.jpg);">
+  <div class="wrapper bg-light py-vh-4 main-background">
     <div class="container">
       <div class="row d-flex justify-content-center">
         <br>
@@ -164,8 +166,14 @@
           <h3 class="fw-bold display-10">на темы психологии и саморазвития</h3>
           <h2 class="fw-bold display-4">SPEAK.ENG THERAPY</h2>
           <p class="lead mb-3">
-            Общаясь на английском, хочешь чувствовать себя уверенно, говорить смело и естественно?
-            Приходи на встречи — прокачивай навыки говорения в классной компании и развивайся
+            Общаясь на английском, хочешь чувствовать себя уверенно,
+            <br>
+            говорить смело и естественно?
+          </p>
+          <p class="lead mb-3">
+            Приходи на встречи — развивайся и прокачивай навыки
+            <br>
+            говорения в классной компании
           </p>
           <a href="#tarifs" class="btn btn-primary px-5 py-3 shadow me-1 button-color">Записаться</a>
           <p class="lead fw-bold" style="color: #d557cc; padding-top: 10px !important;">–60% на первую встречу</p>
@@ -183,8 +191,7 @@
               </div>
             </div>
             <div class="col-md-5 offset-md-1">
-              <!-- TODO: ДОбавть другую картинку -->
-              <div class="shadow ratio ratio-1x1 rounded bg-cover mt-5 bp-center float-end" data-aos="fade-up" style="background-image: url(img/new_photos/ksusha.PNG);">
+              <div class="shadow ratio ratio-1x1 rounded bg-cover mt-5 bp-center float-end" data-aos="fade-up" style="background-image: url(img/new_photos/ksusha2.jpg);">
               </div>
             </div>
             <div class="col-md-6">
@@ -207,15 +214,28 @@
             Я понимаю все твои трудности и вижу «ошибки», как опыт, как движущую силу,
             благодаря которой мы растем.
           </p>
-          <div class="text-center">
-            <a href="#tarifs" class="btn btn-primary px-5 py-3 shadow me-1 button-color">Записаться</a>
+          <div class="col">
+            <p data-aos="fade-left" data-aos-delay="200" style="font-size: 19px !important;">
+              Переходи на канал, чтобы познакомиться со мной поближе:
+            </p>
+          </div>
+          <div class="col" data-aos="fade-left" data-aos-delay="200">
+            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#d557cc" class="bi bi-telegram" viewBox="0 0 16 16">
+              <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.287 5.906q-1.168.486-4.666 2.01-.567.225-.595.442c-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294q.39.01.868-.32 3.269-2.206 3.374-2.23c.05-.012.12-.026.166.016s.042.12.037.141c-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8 8 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629q.14.092.27.187c.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.4 1.4 0 0 0-.013-.315.34.34 0 0 0-.114-.217.53.53 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09"/>
+            </svg>
+            <a class="ms-1 fw-bolder" href="https://t.me/+3weRs3PNhSc4NDVi" style="font-size: 19px !important;">
+              ksush_a_live
+            </a>
+          </div>
+          <div class="text-center d-flex justify-content-center" data-aos="fade-left" data-aos-delay="200" style="padding-top: 40px !important;">
+            <a href="#tarifs" class="btn btn-primary px-5 py-3 shadow me-1 button-color">К тарифам</a>
           </div>
         </div>
       </div>
     </div>
   </div>
   <div class="container" id="advantages">
-    <div class="row py-vh-4">
+    <div class="row py-vh-2">
       <div class="col-md-6 col-lg-3 border-end" data-aos="fade-up">
         <div class="d-flex">
           <div class="col-md-3 flex-fill pt-3 pe-3 pe-md-0">
@@ -275,11 +295,11 @@
     </div>
   </div>
   <div class="container" id="info">
-    <div class="row py-vh-4">
-      <div class="row d-flex justify-content-end">
-        <div class="col-lg-8" data-aos="fade-down">
+    <div class="row py-vh-1">
+      <div class="row d-flex justify-content-start justify-content-xs-center">
+        <div class="col-lg-8" data-aos="fade-right">
           <h4>
-            SPEAK.ENG THERAPY — не просто разговорный клуб, а пространство, где
+            SPEAK.ENG THERAPY — это пространство, где
             мы лучше узнаем себя и мир вокруг, поднимая важные темы.
             <br>
             Наш клуб — это <span style="color: #d557cc">терапевтичные встречи</span> под руководством коуча, где ты:
@@ -289,24 +309,24 @@
       <div class="row d-flex align-items-center">
         <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
           <span class="h5 fw-lighter">01.</span>
-          <p class="py-5 border-top border-dark" style="font-size: 22px !important">
+          <p class="py-md-5 border-top border-dark" style="font-size: 22px !important">
             Научишься выражать мысли легко и естественно, не задумываясь, без запинок и пауз
           </p>
         </div>
-        <div class="col-md-6 col-lg-4 py-vh-4 pb-0" data-aos="fade-up" data-aos-delay="400">
+        <div class="col-md-6 col-lg-4 py-md-4 pb-0" data-aos="fade-up" data-aos-delay="400">
           <span class="h5 fw-lighter">02.</span>
-          <p class="py-5 border-top border-dark" style="font-size: 22px !important">
+          <p class="py-md-5 border-top border-dark" style="font-size: 22px !important">
             Сможешь уверенно использовать английский для своих целей: работа, отношения, переезд, обучение, путешествия, общение и так далее
           </p>
         </div>
-        <div class="col-md-6 col-lg-4 py-vh-6 pb-0" data-aos="fade-up" data-aos-delay="600">
+        <div class="col-md-6 col-lg-4 py-md-6 pb-0" data-aos="fade-up" data-aos-delay="600">
           <span class="h5 fw-lighter">03.</span>
-          <p class="py-5 border-top border-dark" style="font-size: 22px !important">
+          <p class="py-md-5 border-top border-dark" style="font-size: 22px !important">
             Начнешь смело говорить в любой ситуации и с разными людьми, без страхов и комплексов
           </p>
         </div>
       </div>
-      <div class="container">
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row d-flex justify-content-center">
           <br>
           <div class="col-12 col-xl-8 text-center">
@@ -320,7 +340,7 @@
     <div class="container py-vh-6">
       <div class="row d-flex justify-content-center">
         <div class="col-12 col-lg-10 col-xl-8 text-center">
-          <h1>
+          <h1 data-aos="fade-down" style="color: #d557cc">
             Участницы рекомендуют!
           </h1>
 <!--          <p class="lead">-->
@@ -340,10 +360,12 @@
                       как всегда у тебя.
                     </p>
                   </blockquote>
-                  <div class="d-flex justify-content-between border-top pt-3">
-                    <div>
+                  <div class="d-flex border-top pt-3">
+                    <img src="img/persons/maria.jpg" width="48" height="48" class="rounded-circle" alt="" data-aos="fade">
+                    <p class="card-text px-4">
                       <span class="h6 fw-5">Мария</span><br>
-                    </div>
+                      <small class="text-muted">@mari.borele</small>
+                    </p>
                   </div>
                 </div>
               </div>
@@ -357,9 +379,11 @@
                       You give us so deep topics, really interesting to discuss.
                     </p>
                   </blockquote>
-                  <div class="d-flex justify-content-between border-top pt-3">
-                    <p class="card-text">
+                  <div class="d-flex border-top pt-3">
+                    <img src="img/persons/polina.jpg" width="48" height="48" class="rounded-circle" alt="" data-aos="fade">
+                    <p class="card-text px-4">
                       <span class="h6 fw-5">Полина</span><br>
+                      <small class="text-muted">@Outsiider</small>
                     </p>
                   </div>
                 </div>
@@ -375,9 +399,11 @@
                       Я рада, что удалось поболтать с интересными людьми, да еще и на английском.
                     </p>
                   </blockquote>
-                  <div class="d-flex justify-content-between border-top pt-3">
-                    <p class="card-text">
-                      <span class="h6 fw-5">Ния</span><br>
+                  <div class="d-flex border-top pt-3">
+                    <img src="img/persons/olesya.jpg" width="48" height="48" class="rounded-circle" alt="" data-aos="fade">
+                    <p class="card-text px-4">
+                      <span class="h6 fw-5">Олеся</span><br>
+                      <small class="text-muted">@olesya.troinova</small>
                     </p>
                   </div>
                 </div>
@@ -388,12 +414,15 @@
                 <div class="card-body">
                   <blockquote class="blockquote">
                     <p>
-                      Мне понравилось занятие, была интересная тема. Очень проработанная обратная связь от тебя, спасибо!
+                      Это мой первый опыт участия в спикинг клабе, было комфортно!
+                      Понравилось просто разговаривать с новыми людьми, мне не хватает такого опыта, пусть я и живу не в России.
                     </p>
                   </blockquote>
-                  <div class="d-flex justify-content-between border-top pt-3">
-                    <p class="card-text">
-                      <span class="h6 fw-5">Татьяна О.</span><br>
+                  <div class="d-flex border-top pt-3">
+                    <img src="img/persons/rita.jpg" width="48" height="48" class="rounded-circle" alt="" data-aos="fade">
+                    <p class="card-text px-4">
+                      <span class="h6 fw-5">Маргарита</span><br>
+                      <small class="text-muted">@riit.w</small>
                     </p>
                   </div>
                 </div>
@@ -409,9 +438,11 @@
                       Комфортная обстановка, где можно спокойно общаться.
                     </p>
                   </blockquote>
-                  <div class="d-flex justify-content-between border-top pt-3">
-                    <p class="card-text">
-                      <span class="h6 fw-5">Татьяна Т.</span><br>
+                  <div class="d-flex border-top pt-3">
+                    <img src="img/persons/alena.jpg" width="48" height="48" class="rounded-circle" alt="" data-aos="fade">
+                    <p class="card-text px-4">
+                      <span class="h6 fw-5">Алёна</span><br>
+                      <small class="text-muted">@jackwinslow</small>
                     </p>
                   </div>
                 </div>
@@ -425,9 +456,11 @@
                       Я воодушевлена, горжусь собой! Очень было комфортно и интересно.
                     </p>
                   </blockquote>
-                  <div class="d-flex justify-content-between border-top pt-3">
-                    <p class="card-text">
+                  <div class="d-flex border-top pt-3">
+                    <img src="img/persons/yulya.jpg" width="48" height="48" class="rounded-circle" alt="" data-aos="fade">
+                    <p class="card-text px-4">
                       <span class="h6 fw-5">Юлия</span><br>
+                      <small class="text-muted">@fraerka310</small>
                     </p>
                   </div>
                 </div>
@@ -442,8 +475,8 @@
     <div class="row py-vh-4">
       <div class="row text-center gx-3 d-flex align-items-top">
         <div class="col mb-4">
-          <div class="card py-5 aos-init aos-animate shadow" data-aos="fade-right" data-aos-duration="1200">
-            <div class="card-body">
+          <div class="card py-5 aos-init aos-animate shadow" data-aos="fade-right" data-aos-duration="1200" style="background-color: rgba(213,87,204,0.09)">
+            <div class="card-body" >
               <h3 class="card-title">Пробная встреча</h3>
               <small>₽ </small><span class="display-5"><s>950</s></span>
               <span class="display-3 fw-bold">390</span><br>
@@ -457,16 +490,15 @@
           </div>
         </div>
         <div class="col mb-4">
-          <div class="card py-5 aos-init aos-animate shadow" data-aos="fade-right" data-aos-duration="1200">
+          <div class="card py-5 aos-init aos-animate shadow" data-aos="fade-up" data-aos-duration="1200" style="background-color: rgba(213,87,204,0.19)">
             <div class="card-body">
               <h3 class="card-title">Базовый тариф</h3>
               <small>₽ </small><span class="display-3 fw-bold">3 790</span><small>/мес</small><br>
               <small class="text-muted">Подписка</small>
               <div class="card-text mt-3">
                 <ul class="checked py-4 px-sm-2 px-lg-4 text-start list-unstyled">
-                  <li class="py-2 border-bottom">Каждую неделю новая тема</li>
-                  <li class="py-2 border-bottom">4 встречи в месяц</li>
-                  <li class="py-2 border-bottom">90 минут практики в группах по 2-4 человека</li>
+                  <li class="py-2 border-bottom">Каждую неделю новая тема, 4 встречи в месяц</li>
+                  <li class="py-2 border-bottom">90 минут практики, группы 2-4 человека</li>
                   <li class="py-2 border-bottom">Поболтать без заморочек</li>
                 </ul>
               </div>
@@ -475,16 +507,17 @@
           </div>
         </div>
         <div class="col mb-4">
-          <div class="card py-5 aos-init aos-animate shadow" data-aos="fade-right" data-aos-duration="1200">
+          <div class="card py-5 aos-init aos-animate shadow" data-aos="fade-left" data-aos-duration="1200" style="background-color: rgba(213,87,213,0.27)">
             <div class="card-body">
               <h3 class="card-title">Тариф с обратной связью</h3>
               <small>₽ </small><span class="display-3 fw-bold">6 790</span><small>/мес</small><br>
               <small class="text-muted">Подписка</small>
               <div class="card-text mt-3">
                 <ul class="checked py-4 px-sm-2 px-lg-4 text-start list-unstyled">
-                  <li class="py-2 border-bottom">Для тех, кто хочет улучшить язык и поработать дополнительно</li>
+                  <li class="py-2 border-bottom">Базовый тариф +</li>
                   <li class="py-2 border-bottom">Индивидуальная обратная связь</li>
                   <li class="py-2 border-bottom">Таблица с разбором точек роста</li>
+                  <li class="py-2 border-bottom">Для тех, кто хочет улучшить язык и поработать дополнительно</li>
                 </ul>
               </div>
               <a href="#" class="btn btn-primary px-5 py-3 shadow me-1 button-color" id="service3Button">Выбрать тариф</a>
@@ -503,9 +536,12 @@
             <p class="lead" style="font-size: 30px; font-weight: 500;">
               Speaking — самый востребованный навык.
               <br>
-              И другого способа его прокачать,
+              Другого способа его прокачать,
               <br>
               кроме как <span style="color: #d557cc">говорить</span>, не существует.
+            </p>
+            <p class="lead" style="font-weight: 300;">
+              Заполни форму, и я свяжусь с тобой
             </p>
           </div>
           <div class="col-lg-6 col-md-8 col-sm-12">
@@ -550,10 +586,13 @@
                           data-bs-toggle="tooltip"
                           data-bs-placement="top"
                           style="font-weight: 500 !important;">
-                    Записаться
+                    Записаться *
                   </button>
                 </div>
               </div>
+              <p class="lead text-center pt-1" style="font-size: 12px;">
+                * Нажимая кнопку Записаться, вы даете согласие <br>на обработку персональных данных
+              </p>
             </div>
           </div>
         </div>
@@ -660,7 +699,7 @@
               setTimeout(() => {
                 button.disabled = false;
                 button.textContent = "Присоединиться!";
-              }, 300);
+              }, 3000);
             });
 
     button.disabled = true;
@@ -670,7 +709,13 @@
 
 <footer>
   <div class="container text-center">По любым вопросам пиши: <a href="https://t.me/itsksushalive">t.me/itsksushalive</a></div>
-  <div class="container text-center py-3 small">Информация размещённая на сайте не является публичной офертой</div>
+  <div class="container text-center py-3" style="font-size: 12px;">
+    Информация размещённая на сайте не является публичной офертой
+    <br>
+    Меньшенина Ксения Сергеевна ИНН: 744725682546
+    <br>
+    <a href="/privacy.html">Политика конфиденциальности</a>
+  </div>
 </footer>
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/aos.js"></script>
